##Text encoding: utf-8

2006-10-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: needs gtk+ >= 2.10.0.
	* gcu/application.cc: add a GtkRecentManager member.
	* gcu/application.h: ditto.
	* programs/3d/application.cc: implement recent files for the 3d viewer.
	* programs/3d/window.cc: ditto.

2006-10-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/application.cc: add screen resolution detection (assuming vertical
	and horizontal resolution are the same).
	* gcu/application.h: ditto.
	* programs/calc/gchemcalc.cc: removed obsolete headers.
	* programs/table/gchemtable-curve.cc: ditto.

2006-09-24 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* gcu/Makefile.am: Fixed automake warning.
	* programs/3d/window.cc (on_about, on_about_activate_url): Just some
	cleanup and improvements. Added "clickable" Homepage URL.
	(entries[]): Fixed print and added about icon.
	* programs/table/gchemtable-app.cc (on_about, on_about_activate_url)
	(entries[]): Ditto.
	* programs/calc/gchemcalc.cc (on_about, on_about_activate_url)
	(entries[]): Ditto.
	(cb_print_version): Fixed string.
	(main): Improved usage output.

2006-09-24 Daniel Leidert <daniel.leidert.spam@gmx.net>
	* configure.ac (MP_*): Replaced by GCU_* macros.
	* AUTHORS: Updated information.
	* README: Added a note about the applications for manpage processing.
	* acinclude.m4: Updated. All macros have been renamed to GCU_* instead
	of MP_*.
	(MP_PROG_XMLLINT): Added check, if PKG_CHECK_EXISTS macro is
	available. Removed `echo' usage by using AC_MSG_* macros.
	(MP_PROG_XSLTPROC): Make xsltproc optional, so users don't need a
	local installation. Likewise for `echo' usage.
	(MP_PROG_MAN): Likewise.
	* docs/man/Makefile.am (man1_MANS, man3_MANS): Made xsltproc optional.
	(check-local): Cosmetic fixes.

2006-09-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/crystal/window.cc: fixed typo in menus. [#17832].

2006-09-23  Jean Bréfort  <jean.brefort@normalesup.org>