@@ -263,6 +263,20 @@ public:
 	@return the requested property if known, or NULL.
 	*/
 	Value *const GetProperty (char const *property_name) {return props[property_name];}
+	/*!
+	@param property_name: the name of the property as used in the Blue
+	Obelisk Data Repository (without the "bo:" prefix).
+
+	@return the requested string property if known as a reference or an empty string.
+	*/
+	string &GetStringProperty (char const *property_name) {return sprops[property_name];}
+	/*!
+	@param property_name: the name of the property as used in the Blue
+	Obelisk Data Repository (without the "bo:" prefix).
+
+	@return the requested integer property if known, or 0.
+	*/
+	int GetIntegerProperty (char const *property_name) {return iprops[property_name];}
 
 private:
 	unsigned char m_Z, m_nve, m_tve, m_maxve;
@@ -282,6 +296,8 @@ private:
 	vector<GcuDimensionalValue> m_ae;
 	map<string, string> names;
 	map<string, Value*> props;
+	map<string, string> sprops;
+	map<string, int> iprops;
 	string ElecConfig;
 };
 
